--- a/.project
+++ b/.project
@@ -82,6 +82,11 @@
 			<location>C:/var/folders/42/25_dz67d0s90tq1kph29hdy00000gp/T/Katalon/Web Services/kat-3789224176340435700.groovy</location>
 		</link>
 		<link>
+			<name>kat-4053257468498870256.groovy</name>
+			<type>1</type>
+			<location>C:/Users/Techman/AppData/Local/Temp/Katalon/Web Services/kat-4053257468498870256.groovy</location>
+		</link>
+		<link>
 			<name>kat-4056267424964330749.groovy</name>
 			<type>1</type>
 			<location>C:/var/folders/42/25_dz67d0s90tq1kph29hdy00000gp/T/Katalon/Web Services/kat-4056267424964330749.groovy</location>
@@ -654,6 +659,24 @@
 		</filter>
 		<filter>
 			<id>1567491555015</id>
+			<name></name>
+			<type>6</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>(.*\.svn-base$)|(.*\.png$)|(.*\.log$)|(.*\.xlsx$)|(.*\.xls$)|(.*\.csv$)|(.*\.txt$)</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1570251185413</id>
+			<name></name>
+			<type>10</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>.*\.svn$</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1570251185444</id>
 			<name></name>
 			<type>6</type>
 			<matcher>
